13-fargate-basics/applications/ns-app1/nginx-app1-deployment-nodeport.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-app1-deployment
  labels:
    name: nginx-app1
  namespace: ns-app1
spec:
  replicas: 1
  selectors:
    matchLabels:
      app: nginx-app1
  template:
    metadata:
      labels:
        name: nginx-app1
    spec:
      containers:
      - name: nginx-app1
        image: kube-nginxapp1:1.0.0
        ports:
          containerPort: 80
        resources:
          requests:
            cpu: "500m"
            memory: "128M"
          limits:
            cpu: "1000m"
            memory: "512M"  
        livenessProbe:
          httpGet:
            path: /app1/index.html
            port: 5000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /app1/index.html
            port: 5000
          initialDelaySeconds: 30
          timeoutSeconds: 10

---

kind: Service
apiVersion: v1
metadata:
  name: nginx-app1-nodeport-service
  labels:
    app: nginx-app1
  namespace: ns-app1
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
spec:
  selector:
    app: nginx-app1
  type: NodePort
  ports:
  - port:  80
    targetPort:  80
